fixing widht issues on mobile

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -11,7 +11,7 @@ html,
 body {
   position: absolute;
   height: 100%;
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
 }
