--- a/src/styles/workPage.css
+++ b/src/styles/workPage.css
@@ -6,7 +6,6 @@
   margin-top: 5%;
   text-align: center;
   text-overflow: wrap;
-  width: 100%;
 }
 
 .swiper {
